unit three done . you can try

--- a/ph3.html
+++ b/ph3.html
@@ -120,7 +120,7 @@
                         <br>
                         -log[<sup>+</sup>H]
                         <br>
-                         <input  dir="rtl"type="number" id=" " placeholder="ادخل القيمه">
+                         <input  dir="rtl"type="number" id="trkez1" placeholder="ادخل القيمه">
                           <br>
                         <br>
                         <button class="buttom" onclick="PH()"> الحل</button>
@@ -128,9 +128,9 @@
                             <br>
                             <font size="3">النتيجه </font>
                             <br>
-                            <div class="result" id="result"></div>
+                            <div class="result" id="result1"></div>
                             <br>
-                            <div class="tips" id="tips">
+                            <div class="tips" id="tips1">
                                 القانون
                                 <br> القانون الجديد
                                 <br> التعويض
@@ -153,21 +153,21 @@
                     <center>
                     pOH
                     <br>
-                    <input dir="rtl" type="number" id="pH" placeholder="ادخل القيمه">
+                    <input dir="rtl" type="number" id="pOH" placeholder="ادخل القيمه">
                     <br>
                     -log [<sup>-</sup>OH] 
                     <br>
-                    <input  dir="rtl" type="number" id="trkez" placeholder="ادخل القيمه">
+                    <input  dir="rtl" type="number" id="trkez2" placeholder="ادخل القيمه">
                      <br>
                         <br>
-                        <button class="buttom" onclick="PH()"> الحل</button>
+                        <button class="buttom" onclick="POH()"> الحل</button>
                             <br>
                             <br>
                             <font size="3">النتيجه </font>
                             <br>
-                            <div class="result" id="result"></div>
+                            <div class="result" id="result2"></div>
                             <br>
-                            <div class="tips" id="tips">
+                            <div class="tips" id="tips2">
                                 القانون
                                 <br> القانون الجديد
                                 <br> التعويض
@@ -192,11 +192,11 @@
                     
                     pH
                     <br>
-                     <input  dir="rtl" type="number" id="H" placeholder="ادخل القيمه">
+                     <input  dir="rtl" type="number" id="h" placeholder="ادخل القيمه">
                     <br>
                     pOH
                     <br>
-                     <input  dir="rtl" type="number" id="OH" placeholder="ادخل القيمه">
+                     <input  dir="rtl" type="number" id="oH" placeholder="ادخل القيمه">
                     <br>
                         <br>
                         <button class="buttom" onclick="_ppOh()"> الحل</button>
@@ -204,9 +204,9 @@
                             <br>
                             <font size="3">النتيجه </font>
                             <br>
-                            <div class="result" id="result"></div>
+                            <div class="result" id="result3"></div>
                             <br>
-                            <div class="tips" id="tips">
+                            <div class="tips" id="tips3">
                                 القانون
                                 <br> القانون الجديد
                                 <br> التعويض
