--- a/ph2.html
+++ b/ph2.html
@@ -11,10 +11,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/ph2.css">
     <script type="text/javascript" src="jsSrc/index.js"></script>
-    <script src="jsSrc/ktkot.js">
+    <script  type="text/javascript" src="jsSrc/ktkot.js"></script>
+        <link rel="stylesheet" href="style/Phs%20Css.css">
 
-
-    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -62,6 +61,7 @@
     <br>
     <h1 class="center color-white"> قوانين الفصل الثاني</h1>
     <br>
+    <div class="row">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
@@ -74,35 +74,22 @@
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body" dir="rtl">
                     <center>
-                        كتله المذيب
-                        <br>
-                        <input type="number" id="kTh" placeholder="ادخل القيمه">
-                        <br> كتله المحلول
-                        <br>
-                        <input type="number" id="kMh" placeholder="ادخل القيمه">
-                        <br> X100
-                        <br>
-                        <input type="number" id="Km" placeholder="100">
-                        <br> 
-                        <br>
-                        <button class="buttom" onclick="k()"> الحل</button>
-                        <br>
-                        <br>
-                        <font size="3">النتيجه </font>
-                        <br>
-                        <div class="result" id="result"></div>
-                        <br>
-                        <div class="tips" id="tips">
-                            القانون
-                            <br> القانون الجديد
-                            <br> التعويض
+                          <div id="Mdi" class="SeN-BC-gra">
+    <input type="text" id="t1" class="tex" >
+    <input type="text" id="v3" class="tex" >
+    <input type="text" id="t2" class="tex" >
+    <input type="text" id="v4" class="tex" >
+    <div class="buttom" onclick="S()">الحل </div>  
+        <div id="res-div" >
+            النتيجة
+        <div class="result" id="result">  </div>
+            </div>
+            <div class="tips" id="tips"> القانون <br/>القانون الجديد <br/>التعويض <br/></div>    
 
-                        </div>
-
-                    </center>
                 </div>
             </div>
         </div>
+                </center>
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingTwo">
                 <h3 class="panel-title center" dir="rtl">
@@ -429,6 +416,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
 </body>
 
