--- a/ph3.html
+++ b/ph3.html
@@ -71,7 +71,7 @@
                     </a>
                 </h3>
             </div>
-            <div id="collapseSixteen" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSixteen">
+            <div id="collapseSixteen" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingSixteen">
                 <div class="panel-body" dir="rtl">
                     <center>
                     K<sub>w</sub>
@@ -111,7 +111,7 @@
                     </a>
                 </h3>
             </div>
-            <div id="collapseSeventeen" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingSeventeen">
+            <div id="collapseSeventeen" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingSeventeen">
                 <div class="panel-body" dir="ltr">
                     <center>
                     pH
@@ -148,7 +148,7 @@
                     </a>
                 </h3>
             </div>
-            <div id="collapseEightteen" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingEightteen">
+            <div id="collapseEightteen" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingEightteen">
                 <div class="panel-body" dir="ltr">
                     <center>
                     pOH
@@ -185,7 +185,7 @@
                     </a>
                 </h3>
             </div>
-            <div id="collapseNineteen" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingNineteen">
+            <div id="collapseNineteen" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingNineteen">
                 <div class="panel-body" dir="rtl">
                     <center>
                     
