--- a/phs.html
+++ b/phs.html
@@ -16,7 +16,6 @@
     <script type="text/javascript" src="jsSrc/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="jsSrc/ktkot.js"></script>
 </head>
 
 <body class="hg">
@@ -77,21 +76,21 @@
         </a>
                 </h3>
             </div>
-            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseOne" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body" dir="rtl">
                     <center>
                         P<sub>1</sub>
                         <br>
-                        <input type="number" id="p1" placeholder=" ادخل القيمه">
+                        <input type="text" id="p1" placeholder=" ادخل القيمه">
                         <br> V<sub>1</sub>
                         <br>
-                        <input type="number" id="v1" placeholder="ادخل القيمه">
+                        <input type="text" id="v1" placeholder="ادخل القيمه">
                         <br> P<sub>2</sub>
                         <br>
-                        <input type="number" id="p2" placeholder="ادخل القيمه">
+                        <input type="text" id="p2" placeholder="ادخل القيمه">
                         <br> V<sub>2</sub>
                         <br>
-                        <input type="number" id="v2" placeholder="ادخل القيمه">
+                        <input type="text" id="v2" placeholder="ادخل القيمه">
                         <br> =
                         <br>
                         <button class="buttom" onclick="P()"> الحل</button>
@@ -124,16 +123,16 @@
                     <center>
                         V<sub>1</sub>
                         <br>
-                        <input type="number" id="t1" placeholder=" ادخل القيمه">
+                        <input type="text" id="t1" placeholder=" ادخل القيمه">
                         <br> T<sub>1</sub>
                         <br>
-                        <input type="number" id="v3" placeholder="ادخل القيمه">
+                        <input type="text" id="v3" placeholder="ادخل القيمه">
                         <br> V<sub>2</sub>
                         <br>
-                        <input type="number" id="t2" placeholder="ادخل القيمه">
+                        <input type="text" id="t2" placeholder="ادخل القيمه">
                         <br> T<sub>2</sub>
                         <br>
-                        <input type="number" id="v4" placeholder="ادخل القيمه">
+                        <input type="text" id="v4" placeholder="ادخل القيمه">
                         <br> =
                         <br>
                         <button class="buttom" onclick="S()"> الحل</button>
@@ -166,16 +165,16 @@
                     <center>
                         P<sub>1</sub>
                         <br>
-                        <input type="number" id="P1" placeholder="ادخل القيمه">
+                        <input type="text" id="P1" placeholder="ادخل القيمه">
                         <br> T<sub>1</sub>
                         <br>
-                        <input type="number" id="T1" placeholder="ادخل القيمه">
+                        <input type="text" id="T1" placeholder="ادخل القيمه">
                         <br> P<sub>2</sub>
                         <br>
-                        <input type="number" id="P2" placeholder="ادخل القيمه">
+                        <input type="text" id="P2" placeholder="ادخل القيمه">
                         <br> T<sub>2</sub>
                         <br>
-                        <input type="number" id="T2" placeholder="ادخل القيمه">
+                        <input type="text" id="T2" placeholder="ادخل القيمه">
                         <br> =
                         <br>
                         <button class="buttom" onclick="Lusac()">الحل</button>
@@ -207,27 +206,27 @@
                     <center>
                         P<sub>1</sub>
                         <br>
-                        <input type="number" id="pp1" placeholder="ادخل القيمه">
+                        <input type="text" id="pp1" placeholder="ادخل القيمه">
                         <br> V
                         <sub>1</sub>
                         <br>
-                        <input type="number" id="vv1" placeholder="ادخل القيمه">
+                        <input type="text" id="vv1" placeholder="ادخل القيمه">
                         <br> T
                         <sub>1</sub>
                         <br>
-                        <input type="number" id="tt1" placeholder="ادخل القيمه">
+                        <input type="text" id="tt1" placeholder="ادخل القيمه">
                         <br> P
                         <sub>2</sub>
                         <br>
-                        <input type="number" id="pp2" placeholder="ادخل القيمه">
+                        <input type="text" id="pp2" placeholder="ادخل القيمه">
                         <br> V
                         <sub>2</sub>
                         <br>
-                        <input type="number" id="vv2" placeholder="ادخل القيمه">
+                        <input type="text" id="vv2" placeholder="ادخل القيمه">
                         <br> T
                         <sub>2</sub>
                         <br>
-                        <input type="number" id="tt2" placeholder="ادخل القيمه">
+                        <input type="text" id="tt2" placeholder="ادخل القيمه">
                         <br> =
                         <br>
                         <button class="buttom" onclick="publicc()">الحل</button>
@@ -260,19 +259,19 @@
                         الثابت = <code>0.0821</code>
                         <br> P
                         <br>
-                        <input type="number" id="P" placeholder=" ادخل القيمه">
+                        <input type="text" id="P" placeholder=" ادخل القيمه">
                         <br> V
                         <br>
-                        <input type="number" id="V" placeholder=" ادخل القيمه">
+                        <input type="text" id="V" placeholder=" ادخل القيمه">
                         <br> n
                         <br>
-                        <input type="number" id="n" placeholder=" ادخل القيمه">
+                        <input type="text" id="n" placeholder=" ادخل القيمه">
                         <br> R
                         <br>
-                        <input type="number" id="R" placeholder="الثابت = 0.0821">
+                        <input type="text" id="R" placeholder="الثابت = 0.0821">
                         <br> T
                         <br>
-                        <input type="number" id="T" placeholder=" ادخل القيمه">
+                        <input type="text" id="T" placeholder=" ادخل القيمه">
                         <br> =
                         <br>
                         <button class="buttom" onclick="perfect()"> الحل</button>
@@ -293,22 +292,22 @@
                         <code><var>M</var></code> = <code><var>mRT</var></code> / <code><var>PV</var></code>
                         <br> M
                         <br>
-                        <input type="number" id="M1" placeholder="">
+                        <input type="text" id="M1" placeholder="">
                         <br> m
                         <br>
-                        <input type="number" id="m3" placeholder="">
+                        <input type="text" id="m3" placeholder="">
                         <br> R
                         <br>
-                        <input type="number" id="R" placeholder="">
+                        <input type="text" id="R" placeholder="">
                         <br> T
                         <br>
-                        <input type="number" id="T5" placeholder="">
+                        <input type="text" id="T5" placeholder="">
                         <br> P
                         <br>
-                        <input type="number" id="_P" placeholder="">
+                        <input type="text" id="_P" placeholder="">
                         <br> V
                         <br>
-                        <input type="number" id="V5" placeholder="">
+                        <input type="text" id="V5" placeholder="">
                         <br> =
                         <br>
                         <button class="buttom" onclick="M()"> الحل</button>
@@ -329,19 +328,19 @@
                         <code><var>D</var></code> = <code><var>MP</var></code> / <code><var>RT</var></code>
                         <br> D
                         <br>
-                        <input type="number" id="D" placeholder="">
+                        <input type="text" id="D" placeholder="">
                         <br> M
                         <br>
-                        <input type="number" id="MM" placeholder="">
+                        <input type="text" id="MM" placeholder="">
                         <br> P
                         <br>
-                        <input type="number" id="PP" placeholder="">
+                        <input type="text" id="PP" placeholder="">
                         <br> R
                         <br>
-                        <input type="number" id="R" placeholder="">
+                        <input type="text" id="R" placeholder="">
                         <br> T
                         <br>
-                        <input type="number" id="TT" placeholder="">
+                        <input type="text" id="TT" placeholder="">
                         <br> =
                         <br>
                         <button class="buttom" onclick="Density()"> الحل</button>
