unit 3 almost done

--- a/ph3.html
+++ b/ph3.html
@@ -76,15 +76,15 @@
                     <center>
                     K<sub>w</sub>
                         <br>
-                          <input type="number" id="kw" placeholder="ادخل القيمه">
+                          <input type="text" id="kw" placeholder="ادخل القيمه">
                         <br>
                         [<sup>+</sup>H]
                         <br>
-                        <input type="number" id="H" placeholder="ادخل القيمه">
+                        <input type="text" id="H" placeholder="ادخل القيمه">
                         <br>
                         [<sup>-</sup>OH]
                         <br>
-                        <input type="number" id="OH" placeholder="ادخل القيمه">
+                        <input type="text" id="OH" placeholder="ادخل القيمه">
                          <br>
                         <br>
                         <button class="buttom" onclick="KW()"> الحل</button>
@@ -116,11 +116,11 @@
                     <center>
                     pH
                         <br>
-                         <input dir="rtl" type="number" id="pH" placeholder="ادخل القيمه">
+                         <input dir="rtl" type="text" id="pH" placeholder="ادخل القيمه">
                         <br>
                         -log[<sup>+</sup>H]
                         <br>
-                         <input  dir="rtl"type="number" id="trkez1" placeholder="ادخل القيمه">
+                         <input  dir="rtl"type="text" id="trkez1" placeholder="ادخل القيمه">
                           <br>
                         <br>
                         <button class="buttom" onclick="PH()"> الحل</button>
@@ -153,11 +153,11 @@
                     <center>
                     pOH
                     <br>
-                    <input dir="rtl" type="number" id="pOH" placeholder="ادخل القيمه">
+                    <input dir="rtl" type="text" id="pOH" placeholder="ادخل القيمه">
                     <br>
                     -log [<sup>-</sup>OH] 
                     <br>
-                    <input  dir="rtl" type="number" id="trkez2" placeholder="ادخل القيمه">
+                    <input  dir="rtl" type="text" id="trkez3" placeholder="ادخل القيمه">
                      <br>
                         <br>
                         <button class="buttom" onclick="POH()"> الحل</button>
@@ -192,11 +192,11 @@
                     
                     pH
                     <br>
-                     <input  dir="rtl" type="number" id="h" placeholder="ادخل القيمه">
+                     <input  dir="rtl" type="text" id="h" placeholder="ادخل القيمه">
                     <br>
                     pOH
                     <br>
-                     <input  dir="rtl" type="number" id="oH" placeholder="ادخل القيمه">
+                     <input  dir="rtl" type="text" id="oH" placeholder="ادخل القيمه">
                     <br>
                         <br>
                         <button class="buttom" onclick="_ppOh()"> الحل</button>
