--- a/ch.html
+++ b/ch.html
@@ -88,7 +88,11 @@
         <button class="btn btn-default">ابحث</button>
     </center>
     <br />
-
+  <footer>
+        <a href="http://github.com/CODE-12">
+            <p>ALL RIGHT RESEVED&copy; TO CODE-12&reg;</p>
+        </a>
+    </footer>
     <script src="jsSrc/jquery-3.2.0.slim.min.js"></script>
     <script src="jsSrc/index.js"></script>
 </body>
