--- a/ph2.html
+++ b/ph2.html
@@ -426,6 +426,11 @@
         <div class=" col-xs-12 col-sm-12 col-md-6 col-lg-4"></div>
   </div>
        </div> 
+      <footer>
+        <a href="http://github.com/CODE-12" class="a">
+            <p>ALL RIGHT RESEVED&copy; TO CODE-12&reg;</p>
+        </a>
+    </footer>
          
 </body>
 
