--- a/phs.html
+++ b/phs.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="jsSrc/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="style/Poyle.css" rel="stylesheet">
 </head>
 
 <body class="hg">
@@ -68,16 +69,16 @@
 <div class="row">
     <div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 ">  </div>
     <div class="panel-group col-xs-12 col-sm-12 col-md-4 col-lg-4 " id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
+        <div class="panel panel-default ">
             <div class="panel-heading" role="tab" id="headingOne">
-                <h3 class="panel-title center" dir="rtl">
+                <h3 class="panel-title center " dir="rtl">
                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
        قانون بويل
         </a>
                 </h3>
             </div>
             <div id="collapseOne" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body" dir="rtl">
+                <div class="panel-body  " dir="rtl">
                     <center>
                         P<sub>1</sub>
                         <br>
