--- a/ch.html
+++ b/ch.html
@@ -59,12 +59,12 @@
     <!--NAVBAR END-->
     <div class="container">
         <div class="row">
-            <h1 class="center">اختار المقرر</h1>
+            <h1 class="center text-color-g">اختار المقرر</h1>
         </div>
 
         <div class="row">
-            <h3 class="center">:الماده</h3>
-            <select id="selectbasic" name="selectbasic" class="form-control">
+            <h3 class="center text-color-g">:الماده</h3>
+            <select id="selectbasic" name="selectbasic" class="form-control" dir="rtl">
                 <option value="1" disabled >كيمياء 1</option>
                 <option value="2" disabled >كيمياء 2</option>
                 <option value="3" disabled >كيمياء 3</option>
@@ -72,8 +72,8 @@
             </select>
         </div>
         <div class="row">
-            <h3 class="center">:اختر الفصل</h3>
-            <select id="selectPart" class="form-control col-lg-11 col-md-11 text-center">
+            <h3 class="center text-color-y">:اختر الفصل</h3>
+            <select id="selectPart" class="form-control col-lg-11 col-md-11 text-center" dir="rtl">
                 <option value="1" selected >الفصل الاول</option>
                 <option value="2">الفصل الثاني</option>
                 <option value="3">الفصل الثالث</option>
