--- a/ph3.html
+++ b/ph3.html
@@ -94,7 +94,7 @@
                             <br>
                             <div class="result" id="result"></div>
                             <br>
-                            <div class="tips" id="tips">
+                            <div class="tips" id="tips" dir="ltr">
                                 القانون
                                 <br> القانون الجديد
                                 <br> التعويض
@@ -130,7 +130,7 @@
                             <br>
                             <div class="result" id="result1"></div>
                             <br>
-                            <div class="tips" id="tips1">
+                            <div class="tips" id="tips1" dir="ltr">
                                 القانون
                                 <br> القانون الجديد
                                 <br> التعويض
@@ -167,7 +167,7 @@
                             <br>
                             <div class="result" id="result2"></div>
                             <br>
-                            <div class="tips" id="tips2">
+                            <div class="tips" id="tips2" dir="ltr">
                                 القانون
                                 <br> القانون الجديد
                                 <br> التعويض
@@ -206,7 +206,7 @@
                             <br>
                             <div class="result" id="result3"></div>
                             <br>
-                            <div class="tips" id="tips3">
+                            <div class="tips" id="tips3" dir="ltr">
                                 القانون
                                 <br> القانون الجديد
                                 <br> التعويض
