--- a/phs.html
+++ b/phs.html
@@ -78,7 +78,7 @@
                 </h3>
             </div>
             <div id="collapseOne" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body  " dir="rtl">
+                <div class="panel-body" dir="rtl">
                     <center>
                         P<sub>1</sub>
                         <br>
@@ -101,7 +101,7 @@
                         <br>
                         <div class="result" id="result2"></div>
                         <br>
-                        <div class="tips" id="tips2">
+                        <div class="tips" id="tips2" dir="ltr">
                             القانون
                             <br> القانون الجديد
                             <br> التعويض
@@ -124,16 +124,16 @@
                     <center>
                         V<sub>1</sub>
                         <br>
-                        <input type="text" id="t1" placeholder=" ادخل القيمه">
+                        <input type="text" id="v3" placeholder=" ادخل القيمه">
                         <br> T<sub>1</sub>
                         <br>
-                        <input type="text" id="v3" placeholder="ادخل القيمه">
+                        <input type="text" id="t1" placeholder="ادخل القيمه">
                         <br> V<sub>2</sub>
                         <br>
-                        <input type="text" id="t2" placeholder="ادخل القيمه">
+                        <input type="text" id="v4" placeholder="ادخل القيمه">
                         <br> T<sub>2</sub>
                         <br>
-                        <input type="text" id="v4" placeholder="ادخل القيمه">
+                        <input type="text" id="t2" placeholder="ادخل القيمه">
                         <br> =
                         <br>
                         <button class="buttom" onclick="S()"> الحل</button>
@@ -143,7 +143,7 @@
                         <br>
                         <div class="result" id="result1"></div>
                         <br>
-                        <div class="tips" id="tips1">
+                        <div class="tips" id="tips1"dir="ltr">
                             القانون
                             <br> القانون الجديد
                             <br> التعويض
@@ -185,7 +185,7 @@
                         <br>
                         <div class="result" id="result3"></div>
                         <br>
-                        <div class="tips" id="tips3">
+                        <div class="tips" id="tips3"dir="ltr">
                             القانون
                             <br> القانون الجديد
                             <br> التعويض
@@ -237,7 +237,7 @@
                         <br>
                         <div class="result" id="result"></div>
                         <br>
-                        <div class="tips" id="tips">
+                        <div class="tips" id="tips"dir="ltr">
                             القانون
                             <br> القانون الجديد
                             <br> التعويض
@@ -280,7 +280,7 @@
                         <br>
                         <div class="result" id="result4"></div>
                         <br>
-                        <div class="tips" id="tips4">
+                        <div class="tips" id="tips4"dir="ltr">
                             القانون
                             <br> القانون الجديد
                             <br> التعويض
@@ -314,7 +314,7 @@
                         <br>
                         <div class="result" id="result6"></div>
                         <br>
-                        <div class="tips" id="tips6">
+                        <div class="tips" id="tips6"dir="ltr">
                             القانون
                             <br> القانون الجديد
                             <br> التعويض
@@ -345,7 +345,7 @@
                         <br>
                         <div class="result" id="result5"></div>
                         <br>
-                        <div class="tips" id="tips5">
+                        <div class="tips" id="tips5"dir="ltr">
                             القانون
                             <br> القانون الجديد
                             <br> التعويض
