--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <br>
     <table width="70%" height="30%">
         <tr>
-            <td align="center">
-                <font size="6" color="white">(قريبا)</font>
+            <td align="center" id="td1">
+                <font size="6" color="white" >(قريبا)</font>
             </td>
-            <td align="center">
+            <td align="center" id="td2">
                 <font size="6" color="white"><a href="ch.html"> حل المعادلات </a></font>
             </td>
         </tr>
