--- a/ph3.html
+++ b/ph3.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/Ph3.css">
+    <link rel="stylesheet" href="style/uunit%20-%201.css">
     
     <script type="text/javascript" src="jsSrc/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -63,7 +64,7 @@
     <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"></div>
     <div class="panel-group col-xs-12 col-sm-12 col-md-4 col-lg-4" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
+        <div class="panel SeN-lor-g">
             <div class="panel-heading" role="tab" id="headingSixteen">
                 <h3 class="panel-title center" dir="rtl">
                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="true" aria-controls="collapseSixteen">
@@ -103,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel SeN-lor-o">
             <div class="panel-heading" role="tab" id="headingSeventeen">
                 <h3 class="panel-title center" dir="rtl">
                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeventeen" aria-expanded="true" aria-controls="collapseSeventeen">
@@ -140,7 +141,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel SeN-lor-c">
             <div class="panel-heading" role="tab" id="headingEightteen">
                 <h3 class="panel-title center" dir="rtl">
                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEightteen" aria-expanded="true" aria-controls="collapseEightteen">
@@ -177,7 +178,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel SeN-lor-p">
             <div class="panel-heading" role="tab" id="headingNineteen">
                 <h3 class="panel-title center" dir="rtl">
                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNineteen" aria-expanded="true" aria-controls="collapseNineteen">
