--- a/phs.html
+++ b/phs.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="jsSrc/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="style/Poyle.css" rel="stylesheet">
+    <link href="style/uunit%20-%201.css" rel="stylesheet">
 </head>
 
 <body class="hg">
@@ -69,7 +69,7 @@
 <div class="row">
     <div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 ">  </div>
     <div class="panel-group col-xs-12 col-sm-12 col-md-4 col-lg-4 " id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default ">
+        <div class="panel SeN-lor-g ">
             <div class="panel-heading" role="tab" id="headingOne">
                 <h3 class="panel-title center " dir="rtl">
                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -77,8 +77,8 @@
         </a>
                 </h3>
             </div>
-            <div id="collapseOne" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body" dir="rtl">
+            <div id="collapseOne" class="panel-collapse collapse   " role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body  " dir="rtl">
                     <center>
                         P<sub>1</sub>
                         <br>
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel SeN-lor-r">
             <div class="panel-heading" role="tab" id="headingTwo">
                 <h3 class="panel-title center" dir="rtl">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -155,7 +155,7 @@
                 </h3>
             </div>
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-               <div class="panel-body" dir="rtl">
+               <div class="panel-body " dir="rtl">
                     <center>
                         V<sub>1</sub>
                         <br>
@@ -224,7 +224,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel SeN-lor-p">
             <div class="panel-heading" role="tab" id="headingThree">
                 <h3 class="panel-title center" dir="rtl">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -233,7 +233,7 @@
                 </h3>
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                <div class="panel-body" dir="rtl">
+                <div class="panel-body " dir="rtl">
                     <center>
                         P<sub>1</sub>
                         <br>
@@ -298,7 +298,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel SeN-lor-y">
             <div class="panel-heading" role="tab" id="headingfour">
                 <h3 class="panel-title center" dir="rtl">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
@@ -307,7 +307,7 @@
                 </h3>
             </div>
             <div id="collapsefour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading">
-                <div class="panel-body" dir="rtl">
+                <div class="panel-body " dir="rtl">
                     <center>
                         P<sub>1</sub>
                         <br>
@@ -384,7 +384,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel SeN-lor-b">
             <div class="panel-heading" role="tab" id="headingfive">
                 <h3 class="panel-title center" dir="rtl">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
@@ -393,7 +393,7 @@
                 </h3>
             </div>
             <div id="collapsefive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading">
-                <div class="panel-body" dir="rtl">
+                <div class="panel-body " dir="rtl">
                     <center>
                         الثابت = <code>0.0821</code>
                         <br> P
